[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/objects/areas/pickable_object.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/objects.png" type="Texture" id=2]
[ext_resource path="res://src/objects/areas/pickable_objects/fire_extintor.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/particle.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.819608, 0.996078, 1, 0.392157, 1, 1, 1, 0.588235 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
min_value = 0.9
max_value = 1.1
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0, 0.97052 ), 0.188071, 0.188071, 0, 0, Vector2( 1, 1.00396 ), 0.0988704, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]
max_value = 100.0
_data = [ Vector2( 0, 6.10999 ), 0.0, 202.883, 0, 0, Vector2( 1, 31.63 ), -386.659, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]
min_value = 0.1
_data = [ Vector2( 0, 0.1 ), 0.0, 0.124275, 0, 0, Vector2( 1, 1 ), 0.734268, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
linear_accel_curve = SubResource( 7 )
tangential_accel = 20.0
tangential_accel_random = 1.0
scale = 0.5
scale_curve = SubResource( 9 )
color_ramp = SubResource( 3 )
hue_variation_curve = SubResource( 5 )

[sub_resource type="Animation" id=11]
resource_name = "gas_jet"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:process_material:tangential_accel")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 20.0, -20.0, 20.0 ]
}

[node name="FireExtintor" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="1"]
texture = SubResource( 1 )

[node name="GasRange" type="Area2D" parent="." index="2"]
position = Vector2( 0, -8 )
monitoring = false
monitorable = false
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GasRange" index="0"]
polygon = PoolVector2Array( 0, 0, 40, -48, -40, -48 )

[node name="Particles2D" type="Particles2D" parent="GasRange" index="1"]
rotation = -1.5708
emitting = false
amount = 35
visibility_rect = Rect2( -10, -50, 60, 100 )
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 4 )

[node name="AnimationBuffer" type="Timer" parent="GasRange" index="2"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="GasRange" index="3"]
anims/gas_jet = SubResource( 11 )
[connection signal="area_entered" from="GasRange" to="." method="_on_GasRange_area_entered"]
[connection signal="area_exited" from="GasRange" to="." method="_on_GasRange_area_exited"]
[connection signal="timeout" from="GasRange/AnimationBuffer" to="." method="_on_AnimationBuffer_timeout"]
